<resources>
    <string name="app_name" translatable="false">MenToMen</string>
    <string name="dodam_id">도담도담 ID</string>
    <string name="dodam_password">도담도담 Password</string>
    <string name="auto_login">자동 로그인</string>
    <string name="login">로그인</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="design">Design</string>
    <string name="web">Web</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="server">Server</string>
    <string name="home">홈</string>
    <string name="my">마이</string>
    <string name="empty">empty</string>
    <string name="todo">TODO</string>
    <string name="client_id">39bc523458c14eb987b7b16175426a31a9f105b7f5814f1f9eca7d454bd23c73</string>
    <string name="client_secret">e90b070b437f420eb788fad746e97a507984328ddf9142f481397ca6e7afda0e</string>
    <string name="redirectUrl">http://localhost:3000/callback</string>
    <string name="write_text">글쓰기</string>
    <string name="help">멘토에게 부탁할 내용을 입력하세요.</string>
    <string name="post">멘토 요청하기</string>
    <string name="example_name">도현욱</string>
    <string name="welcome">님, 환영합니다!</string>
    <string name="logout">로그아웃</string>
    <string name="comment">댓글을 입력해주세요.</string>
    <string name="mento">멘토 요청</string>
    <string name="search">검색</string>
    <string name="show_more"> ...더보기</string>
    <string name="cancel">취소</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="all_feature">모든 기능을 이용하기 위해 로그인해 주세요</string>
    <string name="password">password</string>
    <string name="id">id</string>
</resources>