<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="kr.hs.dgsw.mentomenv2.feature.detail.comment.CommentSheetViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheetDashBoardLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_draggable="true"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/variable"
            android:gravity="center"
            android:onClick="@{() -> viewModel.cancel()}"
            android:text="@string/cancel"
            android:textColor="@color/ios_blue"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/variable"
            android:gravity="center"
            android:onClick="@{() -> viewModel.editComment()}"
            android:text="@string/edit"
            android:textColor="@color/ios_blue"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tv_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/variable"
            android:gravity="center"
            android:onClick="@{() -> viewModel.deleteComment()}"
            android:text="@string/delete"
            android:textColor="@color/ios_red"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>